# ftll

./: .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  README.md  bun.lockb  index.html  next.config.js  package.json  pnpm-lock.yaml  sst.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: release.yml
.github/workflows/: build&release-nightly.yml  build&release.yml  lint&format-js.yml  lint&format-rs.yml
apps/launcher/: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json
apps/launcher/src/: routeTree.gen.ts
apps/launcher/src-tauri/: tauri.conf.json  tauri.conf.nightly.json
apps/web/: .env.example  .eslintignore  .prettierignore  README.md  next.config.js  package.json  sst-env.d.ts  tailwind.config.ts  tsconfig.json
containers/sentinel/a2s/: challenge.go
containers/sentinel/sentinel/: sentinel.go
containers/sentinel/server/: server.go
infra/: index.ts  server-queue.ts  web.ts
sentinel/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
sentinel/a2s/: client.go  rules.go
sentinel/dzq/: dzq.go
sentinel/log/: log.go
sentinel/server/: types.go
src/: main.css  main.tsx  routeTree.gen.ts  tauri-bindings.d.ts  tauri-bindings.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.nightly.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/dayz/: mod.rs
src-tauri/src/ftll/: mod.rs
src-tauri/src/query/: mod.rs
src-tauri/src/steam/: client.rs  mod.rs
src-tauri/src/updater/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/browser/: page.tsx
src/components/: about-dialog.tsx  ftll-context-provider.tsx  ftll-update-button.tsx  icons.tsx  logo.tsx  main-nav.tsx  mode-toggle.tsx  more-info-button.tsx  more-info.tsx  nav-bar.tsx  player-count-badge.tsx  screen-indicator.tsx  server-download-validator.tsx  server-play-validator.tsx  server-provider.tsx  server-rank-graph.tsx  side-nav.tsx  stateful-table-row.tsx  steam-pfp-medium.tsx  tanstack-router-devtools.tsx  theme-button.tsx  theme-provider.tsx  theme-toggle.tsx  title-bar.tsx  user-button.tsx  user-nav.tsx  user-tooltip.tsx
src/data/: map-filter-data.ts
src/events/: active-download-progress.ts  dayz-shutdown.ts  main.ts  mod-info-found.ts
src/hooks/: useFavoriteServer.ts  useInstalledMods.ts  useModList.ts  usePlayerCount.ts  useServerList.ts  useServerRankGraphData.ts  useSteamworks.ts  useUpdateServer.ts  useUserInfo.ts
src/lib/: convert-time.ts  utils.ts
src/routes/: __root.tsx  index.tsx
src/schemas/: mod-info.ts  player-list-schema.ts  server-schema.ts
src/stores/: connected-server-store.ts  current-server-store.ts  event-init-store.ts  favorite-server-store.ts  mod-download-queue.ts  mod-list-store.ts  server-favorites-store.ts  server-list-store.ts  steam-init-store.ts  user-info-store.ts
src/validators/: bm-graph-res-schema.ts  steam-player-count-res-schema.ts
www/: .env.example  .eslintignore  .gitignore  package.json  pnpm-lock.yaml  sst.config.ts  tsconfig.json
www/src/: env.js
(+209 files in other folders)
