[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.11", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-os = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.4"
steamworks = { path = "../../steamworks-rs" }
a2s = { path = "./vendor/a2s", features = ["async"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
serde_derive = "1.0.197"
lazy_static = "1.4.0"
tokio = "1.36.0"
directories = "5.0.1"
futures = "0.3.30"
serde_with = "3.7.0"
window-vibrancy = "0.5.0"

