[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.15", features = [] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-os = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.197"
serde_with = "3.7.0"
tokio = "1.36.0"
futures = "0.3.30"
reqwest = { version = "0.11.25", features = ["blocking", "json"] }
lazy_static = "1.4.0"
directories = "5.0.1"
window-vibrancy = "0.5.0"

